# polka

./: .gitignore  CMakeLists.txt  polka.qrc
doc/: CMakeLists.txt  index.docbook
html/: personview.html  polka.css
lib/polka/: CMakeLists.txt  create_polka  htmlcreator.cpp  htmlcreator.h  htmlrenderer.cpp  htmlrenderer.h  polka.cpp  polka.h  polka_export.h
microkde/: KConfig  KDialog  KDialog.cpp  KDialog.h  KDirWatch  KGlobal  KInputDialog  KInputDialog.cpp  KLocale  KLocale.cpp  KMessageBox  KMessageBox.cpp  KProcess  KPushButton  KPushButton.cpp  KRandom  KRandom.cpp  KRun  KStandardDirs  KStandardDirs.cpp  KStandardDirs.h  KUrl  KWindowSystem  kdemacros.h
pics/: CMakeLists.txt
schema/: polka.xml
src/: .gitignore  CMakeLists.txt  DESIGN  Messages.sh  Polka.pro  TODO  addresseditor.cpp  addresseditor.h  buttonitem.cpp  buttonitem.h  closeitem.cpp  closeitem.h  commenteditor.cpp  commenteditor.h  fanmenu.cpp  fanmenu.h  fanmenuelement.cpp  fanmenuelement.h  fanmenuitem.cpp  fanmenuitem.h  gitcommand.cpp  gitcommand.h  gitdir.cpp  gitdir.h  gitremote.cpp  gitremote.h  groupadderitem.cpp  groupadderitem.h  groupgraphicsview.cpp  groupgraphicsview.h  grouplistview.cpp  grouplistview.h  groupview.cpp  groupview.h  historyview.cpp  historyview.h  htmlcreator.cpp  htmlcreator.h  htmlrenderer.cpp  htmlrenderer.h  (+63 more)
src/meego/: settings.cpp  settings.h
